--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -17,12 +17,11 @@
     <img class="homeBanner" src={{ asset ('img/homeBanner.png')}}>
     
     <div class="content">
-        <h1 class="homeTitle">Sauvez des vies ou aidez la recherche avec votre don de sang placentaire.</h1>
-        <h2 class="homeText">Lors de votre accouchement, faites le choix de faire un don de sang de cordon pour un usage thérapeutique ou
-        scientifique.</h2>
+        <h1 class="homeTitle">Soutenez la recherche biomédicale par votre don de sang de cordon.</h1>
+        <h2 class="homeText">Lymphobank est une socièté de biotechnologie qui acompagne la recherche par la cession de produits issus du cordon ombilical ou du placenta.</h2>
 
         <div class="cadre">
-            <h2>Donner pour Lymphobank, c'est GÉANT !</h2>
+            <h2>Donner son sang de cordon, c'est GÉANT !</h2>
             <div class="schemaGeant">
                 <div class="geantLetter">
                     <h2><div class="underline">G</div>ratuit</h2>
@@ -56,37 +55,38 @@
             </div>
         </div>
 
-        <p>Lymphobank est une biotech qui a vocation à fournir des cellules sanguines adultes et
-        placentaires à usage de recherche et des prestations de services en immunothérapie
-        cellulaire.</p>
-
         <h2>Témoignages :</h2>
         
         
-            <!-- Slideshow container -->
-            <div class="slideshow-container">
-                {% for temoignage in temoignages %}
-                <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
-                    <div class="title"><h2>{{temoignage.temoin}}, {{temoignage.metierTemoin}}</h2></div>
-                    <div class="text"><p>{{temoignage.temoignage}}</p></div>
-                </div>
-                {% endfor %}
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+            {% for temoignage in temoignages %}
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="title"><h2>{{temoignage.temoin}}, {{temoignage.metierTemoin}}</h2></div>
+                <div class="text"><p>{{temoignage.temoignage}}</p></div>
             </div>
-            <br>
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-                {% for temoignage in temoignages %}
-                    <span class="dot" onclick="currentSlide({{temoignage.id}})"></span>
-                {% endfor %}
-            </div>
+            {% endfor %}
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            {% for temoignage in temoignages %}
+                <span class="dot" onclick="currentSlide({{temoignage.id}})"></span>
+            {% endfor %}
+        </div>
+
+
+        <h2>actu</h2>
+
+        <h2>logo</h2>
         
         
 
-        <h2>Réseau de maternités de Lymphobank :</h2>
+        <h2>Réseau de maternités partenaires de Lymphobank :</h2>
 
         {% for etablissement in etablissements %}
             <div class="js-marker" data-lat="{{etablissement.lat}}" data-lon="{{etablissement.lon}}" data-text="{{etablissement.Nom}}"></div>
