--- a/templates/admin/temoignages/ShowTemoignage.html.twig
+++ b/templates/admin/temoignages/ShowTemoignage.html.twig
@@ -46,7 +46,7 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h5 class="modal-title" id="exampleModalLabel">
-                                                    <strong>Voulez vous vraiment supprimer l'témoignage' ?</strong>
+                                                    <strong>Voulez vous vraiment supprimer le témoignage ?</strong>
                                                 </h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                 </div>
@@ -54,7 +54,7 @@
                                                         <div class="modal-body">
                                                             <h5>Identifiant : {{temoignage.id}}</h5>
                                                             <br>
-                                                            <h5>Nom de l'témoignage : {{temoignage.temoin}}</h5>
+                                                            <h5>Témoin : {{temoignage.temoin}}</h5>
                                                             <br>
                                                             <h5><strong>Cette action est irréversible</strong></h5>
                                                             <input type="hidden" name="_method" value="DELETE">
