--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -172,7 +172,9 @@
             <button class="btnCard"><p>En savoir plus</p></button>
             <div class="panelCard">
                 <div class="schemaCard">
-                    <h2>info</h2>
+                    <h2>La maman est informée sur les usages du don</h2>
+                    <img class="icon" src={{ asset ('img/icons/doctor.svg')}}>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <h2>La maman donne son consentement</h2>
                     <img class="icon" src={{ asset ('img/icons/contract.svg')}}>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
