--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -59,6 +59,55 @@
             <li>Niveau 2 : étape centrée sur la maîtrise de l'organisation interne : actions préventives et correctives, processus support</li>
         </ul>
     </div>
+    <br>
+    <p>C'est la récompense le travail de structuration de nos activités de préparation, de conservation, de constitution et de distribution de collections d'échantillons biologiques au travers de la valorisation de produits issus de dons de sang.</p>
+    <h2>Notre équipe</h2>
+    <p>La complémentarité des expertises de notre équipe nous a permis de structurer l’industrialisation de nos démarches.
+    </p>
+    <div class="valeurs">
+        <div class="card">
+            <div class="card-title"><h2>Quelle que soit la prestation, ces protocoles industriels sont respectés pour leur performance et la maîtrise des process.</h2></div>
+            <div class="contentCard">
+                <ul>
+                    <li>Connaissance de la composition des cellules contaminantes</li>
+                    <li>Maîtrise des risques de contamination VHB, VHC et VIH (garantie par l'EFS)</li>
+                    <li>Quantité contrôlée du nombre minimum de cellules produite par ampoule</li>
+                    <li>Justification par lot du protocole de fabrication (viabilité, pureté, analyse microbienne et virale)</li>
+                    <li>Maîtrise et traçabilité du processus de congélation</li>
+                    <li>Traçabilité totale par marquage individuel des ampoules et par lot</li>
+                    <li>Optimisation du volume de stockage</li>
+                    <li>RGPD respectée et Double anonymisation</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <h2>Notre équipe est composée 5 personnes expérimentée : </h2>
+    <img class="photo" src={{ asset ('img/equipe.jpg')}}>
+    <ul class="equipe">
+        <li><strong>Marine DANGEVILLE :</strong> Responsable de production & Relations fournisseurs</li>
+        <li><strong>Mathieu GONCALVES :</strong> Responsable R&D</li>
+        <li><strong>Satya LEFRANC :</strong> Technicienne de production en Biotechnologie</li>
+        <li><strong>Lucie LAURENT </strong>: Technicienne de production en Biotechnologie</li>
+        <li><strong>Eric ROBINET :</strong> Direction & Pilotage Relation Clients</li>
+    </ul>
+    <h2>Domaine d’applications (principaux secteurs d’activités)</h2>
+    <div class="valeurs">
+        <div class="card">
+            <div class="card-title"><h2>Voici les différents secteurs d’applications dans lesquels vont être utilisés vos dons :</h2></div>
+            <div class="contentCard">
+                <ul>
+                    <li>Biotechnologie</li>
+                    <li>Pharmaceutique</li>
+                    <li>Vaccinologie</li>
+                    <li>Immunologie</li>
+                    <li>Oncologie</li>
+                    <li>Infectiologie</li>
+                    <li>Biothérapies</li>
+                    <li>Thérapie cellulaire et génique</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}{% endblock %}
