--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -7,6 +7,7 @@
 {% block stylesheets %}
     {{ encore_entry_link_tags('scss/home') }}
     {{ encore_entry_link_tags('scss/map') }}
+    {{ encore_entry_link_tags('scss/carousel') }}
     {# leaflet map #}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
@@ -55,30 +56,18 @@
             </div>
         </div>
 
-        <h2>Témoignages :</h2>
+        <h1>Témoignages :</h1>
         
-        
-        <!-- Slideshow container -->
-        <div class="slideshow-container">
-            {% for temoignage in temoignages %}
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="title"><h2>{{temoignage.temoin}}, {{temoignage.metierTemoin}}</h2></div>
-                <div class="text"><p>{{temoignage.temoignage}}</p></div>
-            </div>
-            {% endfor %}
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <div class="carousel">
+            <figure>
+                {% for temoignage in temoignages %}
+                    <div class="cadre">
+                    <h2>{{temoignage.temoin}}, {{temoignage.metierTemoin}}</h2>
+                    <p>{{temoignage.temoignage}}</p>
+                    </div>
+                {% endfor %}
+            </figure>
         </div>
-        <br>
-        <!-- The dots/circles -->
-        <div style="text-align:center">
-            {% for temoignage in temoignages %}
-                <span class="dot" onclick="currentSlide({{temoignage.id}})"></span>
-            {% endfor %}
-        </div>
-
 
         <h2>actu</h2>
 
@@ -106,63 +95,7 @@
     crossorigin=""></script>
     <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js?v1.3.0"></script>
 
-    
-    
-    <script>
-        //carousel
 
-        var slideIndex = 1;
-        showSlides(slideIndex);
-
-        // Next/previous controls
-        function plusSlides(n) {
-        showSlides(slideIndex += n);
-        }
-
-        // Thumbnail image controls
-        function currentSlide(n) {
-        showSlides(slideIndex = n);
-        }
-
-        function showSlides(n) {
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("dot");
-        var container = document.getElementsByClassName("slideshow-container");
-        if (n > slides.length) {slideIndex = 1}
-        if (n < 1) {slideIndex = slides.length}
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" activeDot", "");
-        }
-        slides[slideIndex-1].style.display = "block";
-        dots[slideIndex-1].className += " activeDot";
-        }
-
-        //timer
-        var slideIndex = 0;
-        showSlidesTimer();
-
-        function showSlidesTimer() {
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("dot");
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-        }
-        slideIndex++;
-        if (slideIndex > slides.length) {slideIndex = 1}
-        slides[slideIndex-1].style.display = "block";
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" activeDot", "");
-        }
-        dots[slideIndex-1].className += " activeDot";
-        setTimeout(showSlidesTimer, 5000); // Change image every 2 seconds
-        }
-
-    </script>
 
 {% endblock %}
 
